{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 171,
  "lineage": "6a35feb3-d29e-8b34-211b-c07f00908e7e",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:security-group/sg-0ba3648b72b2a2d56",
            "description": "Security group for EFS mount targets",
            "egress": [],
            "id": "sg-0ba3648b72b2a2d56",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from ECS tasks",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b767ed6aec3dcf26"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "sample-dev-efs-sg",
            "name_prefix": "",
            "owner_id": "555750989087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-dev-efs-sg"
            },
            "tags_all": {
              "Name": "sample-dev-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.fargate_ecs_task",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08cbab539b9470ec6",
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:elastic-ip/eipalloc-08cbab539b9470ec6",
            "association_id": "eipassoc-027438df1f47b729d",
            "domain": "vpc",
            "id": "eipalloc-08cbab539b9470ec6",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-07cd6592241a05088",
            "private_dns": "ip-10-0-1-79.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-54-79-130-133.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.79.130.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sample-dev-nat-a"
            },
            "tags_all": {
              "Name": "sample-dev-nat-a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:internet-gateway/igw-0cf36b82a7bdeb5ae",
            "id": "igw-0cf36b82a7bdeb5ae",
            "owner_id": "555750989087",
            "tags": {
              "Name": "sample-dev-igw"
            },
            "tags_all": {
              "Name": "sample-dev-igw"
            },
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:loadbalancer/app/sample-dev-alb/58f4ad471fbffbc7",
            "arn_suffix": "app/sample-dev-alb/58f4ad471fbffbc7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sample-dev-alb-285980756.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:loadbalancer/app/sample-dev-alb/58f4ad471fbffbc7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sample-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07ac77206d9d1f250"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00fcf9f1400d0ec3b"
              },
              {
                "subnet_id": "subnet-04cd4a3cc3cadf3cb"
              }
            ],
            "subnets": [
              "subnet-00fcf9f1400d0ec3b",
              "subnet-04cd4a3cc3cadf3cb"
            ],
            "tags": {
              "Name": "sample-dev-alb"
            },
            "tags_all": {
              "Name": "sample-dev-alb"
            },
            "vpc_id": "vpc-0f8845cd5c0b27429",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.network.aws_lb_target_group.fargate01",
            "module.network.aws_lb_target_group.fargate02",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public_a",
            "module.network.aws_subnet.public_c",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:listener/app/sample-dev-alb/58f4ad471fbffbc7/e3f82350bf4013b3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:targetgroup/sample-dev-fargate-tg01/17d7f5b0a0be53ca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:listener/app/sample-dev-alb/58f4ad471fbffbc7/e3f82350bf4013b3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:loadbalancer/app/sample-dev-alb/58f4ad471fbffbc7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.alb",
            "module.network.aws_lb_target_group.fargate01",
            "module.network.aws_lb_target_group.fargate02",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public_a",
            "module.network.aws_subnet.public_c",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:listener/app/sample-dev-alb/58f4ad471fbffbc7/4fc0d23b2f190a4d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:targetgroup/sample-dev-fargate-tg02/5d0767e49ee1fea5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:listener/app/sample-dev-alb/58f4ad471fbffbc7/4fc0d23b2f190a4d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:loadbalancer/app/sample-dev-alb/58f4ad471fbffbc7",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.alb",
            "module.network.aws_lb_target_group.fargate01",
            "module.network.aws_lb_target_group.fargate02",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public_a",
            "module.network.aws_subnet.public_c",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fargate01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:targetgroup/sample-dev-fargate-tg01/17d7f5b0a0be53ca",
            "arn_suffix": "targetgroup/sample-dev-fargate-tg01/17d7f5b0a0be53ca",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:targetgroup/sample-dev-fargate-tg01/17d7f5b0a0be53ca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:loadbalancer/app/sample-dev-alb/58f4ad471fbffbc7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sample-dev-fargate-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "sample-dev-fargate-tg01"
            },
            "tags_all": {
              "Name": "sample-dev-fargate-tg01"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fargate02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:targetgroup/sample-dev-fargate-tg02/5d0767e49ee1fea5",
            "arn_suffix": "targetgroup/sample-dev-fargate-tg02/5d0767e49ee1fea5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:targetgroup/sample-dev-fargate-tg02/5d0767e49ee1fea5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:555750989087:loadbalancer/app/sample-dev-alb/58f4ad471fbffbc7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sample-dev-fargate-tg02",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "sample-dev-fargate-tg02"
            },
            "tags_all": {
              "Name": "sample-dev-fargate-tg02"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08cbab539b9470ec6",
            "association_id": "eipassoc-027438df1f47b729d",
            "connectivity_type": "public",
            "id": "nat-0192d808566bd467e",
            "network_interface_id": "eni-07cd6592241a05088",
            "private_ip": "10.0.1.79",
            "public_ip": "54.79.130.133",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00fcf9f1400d0ec3b",
            "tags": {
              "Name": "sample-dev-nat-a"
            },
            "tags_all": {
              "Name": "sample-dev-nat-a"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_a",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "protected_rtb_a_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01247a38641a2eb031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0192d808566bd467e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01247a38641a2eb03",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_a",
            "module.network.aws_nat_gateway.nat_a",
            "module.network.aws_route_table.protected_rtb_a",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "protected_rtb_c_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02f829ea99b2198ab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0192d808566bd467e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f829ea99b2198ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_a",
            "module.network.aws_nat_gateway.nat_a",
            "module.network.aws_route_table.protected_rtb_c",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_rtb_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cf36b82a7bdeb5ae",
            "id": "r-rtb-01380af96a15fd49c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01380af96a15fd49c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public_rtb",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:route-table/rtb-06a5e42e30a1e9b8e",
            "id": "rtb-06a5e42e30a1e9b8e",
            "owner_id": "555750989087",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sample-dev-private-rtb"
            },
            "tags_all": {
              "Name": "sample-dev-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "protected_rtb_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:route-table/rtb-01247a38641a2eb03",
            "id": "rtb-01247a38641a2eb03",
            "owner_id": "555750989087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0192d808566bd467e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-dev-protected-rtb-a"
            },
            "tags_all": {
              "Name": "sample-dev-protected-rtb-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "protected_rtb_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:route-table/rtb-02f829ea99b2198ab",
            "id": "rtb-02f829ea99b2198ab",
            "owner_id": "555750989087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0192d808566bd467e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-dev-protected-rtb-c"
            },
            "tags_all": {
              "Name": "sample-dev-protected-rtb-c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:route-table/rtb-01380af96a15fd49c",
            "id": "rtb-01380af96a15fd49c",
            "owner_id": "555750989087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf36b82a7bdeb5ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-dev-public-rtb"
            },
            "tags_all": {
              "Name": "sample-dev-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f42ab77d3f84815",
            "route_table_id": "rtb-06a5e42e30a1e9b8e",
            "subnet_id": "subnet-09ead98687ac56c1f"
          },
          "dependencies": [
            "module.network.aws_route_table.private_rtb",
            "module.network.aws_subnet.private_a",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0878c417a20ebbf38",
            "route_table_id": "rtb-06a5e42e30a1e9b8e",
            "subnet_id": "subnet-05efcdfb21950229e"
          },
          "dependencies": [
            "module.network.aws_route_table.private_rtb",
            "module.network.aws_subnet.private_c",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "protected_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed06189096a73a73",
            "route_table_id": "rtb-01247a38641a2eb03",
            "subnet_id": "subnet-00354107b47f541d8"
          },
          "dependencies": [
            "module.network.aws_route_table.protected_rtb_a",
            "module.network.aws_subnet.protected_a",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "protected_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068337e1cb4ab1f02",
            "route_table_id": "rtb-02f829ea99b2198ab",
            "subnet_id": "subnet-07cdc8f5ca3123b2b"
          },
          "dependencies": [
            "module.network.aws_route_table.protected_rtb_c",
            "module.network.aws_subnet.protected_c",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049453eeb2d462707",
            "route_table_id": "rtb-01380af96a15fd49c",
            "subnet_id": "subnet-00fcf9f1400d0ec3b"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rtb",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbdb9532c53a4f87",
            "route_table_id": "rtb-01380af96a15fd49c",
            "subnet_id": "subnet-04cd4a3cc3cadf3cb"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rtb",
            "module.network.aws_subnet.public_c",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:security-group/sg-07ac77206d9d1f250",
            "description": "sample-dev-alb-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ac77206d9d1f250",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "555750989087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-dev-alb-sg"
            },
            "tags_all": {
              "Name": "sample-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate_ecs_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:security-group/sg-0b767ed6aec3dcf26",
            "description": "sample-dev-fargate-ecs-task-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b767ed6aec3dcf26",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "sample-dev-alb-sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07ac77206d9d1f250"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-dev-fargate-ecs-task-sg",
            "name_prefix": "",
            "owner_id": "555750989087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-dev-fargate-ecs-task-sg"
            },
            "tags_all": {
              "Name": "sample-dev-fargate-ecs-task-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:security-group/sg-0dc86dd448c784726",
            "description": "sample-dev-rds-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc86dd448c784726",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "sample-dev-fargate-ecs-task-sg",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b767ed6aec3dcf26"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sample-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "555750989087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-dev-rds-sg"
            },
            "tags_all": {
              "Name": "sample-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.fargate_ecs_task",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:subnet/subnet-09ead98687ac56c1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ead98687ac56c1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "555750989087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-dev-private-subnet-a"
            },
            "tags_all": {
              "Name": "sample-dev-private-subnet-a"
            },
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:subnet/subnet-05efcdfb21950229e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05efcdfb21950229e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "555750989087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-dev-private-subnet-c"
            },
            "tags_all": {
              "Name": "sample-dev-private-subnet-c"
            },
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "protected_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:subnet/subnet-00354107b47f541d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00354107b47f541d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "555750989087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-dev-protected-subnet-a"
            },
            "tags_all": {
              "Name": "sample-dev-protected-subnet-a"
            },
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "protected_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:subnet/subnet-07cdc8f5ca3123b2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cdc8f5ca3123b2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "555750989087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-dev-protected-subnet-c"
            },
            "tags_all": {
              "Name": "sample-dev-protected-subnet-c"
            },
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:subnet/subnet-00fcf9f1400d0ec3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fcf9f1400d0ec3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "555750989087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-dev-public-subnet-a"
            },
            "tags_all": {
              "Name": "sample-dev-public-subnet-a"
            },
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:subnet/subnet-04cd4a3cc3cadf3cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cd4a3cc3cadf3cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "555750989087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-dev-public-subnet-c"
            },
            "tags_all": {
              "Name": "sample-dev-public-subnet-c"
            },
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:vpc/vpc-0f8845cd5c0b27429",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e901c2e11c8551b2",
            "default_route_table_id": "rtb-06873b4643dc3f5ab",
            "default_security_group_id": "sg-0e820270b7d2f9fcf",
            "dhcp_options_id": "dopt-69dcc70e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8845cd5c0b27429",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06873b4643dc3f5ab",
            "owner_id": "555750989087",
            "tags": {
              "Name": "sample-dev-vpc"
            },
            "tags_all": {
              "Name": "sample-dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:vpc-endpoint/vpce-041f840b312519797",
            "cidr_blocks": [
              "52.94.13.0/24",
              "35.71.97.0/25",
              "35.71.97.128/26"
            ],
            "id": "vpce-041f840b312519797",
            "owner_id": "555750989087",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-62a5400b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01247a38641a2eb03",
              "rtb-01380af96a15fd49c",
              "rtb-02f829ea99b2198ab"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.dynamodb",
            "service_region": "ap-southeast-2",
            "state": "available",
            "tags": {
              "Name": "sample-dev-vpce-dynamodb"
            },
            "tags_all": {
              "Name": "sample-dev-vpce-dynamodb"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "dependencies": [
            "module.network.aws_route_table.protected_rtb_a",
            "module.network.aws_route_table.protected_rtb_c",
            "module.network.aws_route_table.public_rtb",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:555750989087:vpc-endpoint/vpce-04190a615bad24619",
            "cidr_blocks": [
              "3.5.164.0/22",
              "16.12.74.0/24",
              "3.5.168.0/23",
              "52.95.128.0/21"
            ],
            "id": "vpce-04190a615bad24619",
            "owner_id": "555750989087",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ca54005",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01247a38641a2eb03",
              "rtb-01380af96a15fd49c",
              "rtb-02f829ea99b2198ab"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.s3",
            "service_region": "ap-southeast-2",
            "state": "available",
            "tags": {
              "Name": "sample-dev-vpce-s3"
            },
            "tags_all": {
              "Name": "sample-dev-vpce-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f8845cd5c0b27429"
          },
          "dependencies": [
            "module.network.aws_route_table.protected_rtb_a",
            "module.network.aws_route_table.protected_rtb_c",
            "module.network.aws_route_table.public_rtb",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}